<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    android:id="@+id/aboutLayout"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <TextView
        android:id="@+id/app_tagline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:background="@color/colorPrimary"
        android:textSize="24sp"
        ></TextView>

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_tagline"
        android:rowCount="3"
        android:columnCount="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

        <!--    First Row   -->
        <androidx.cardview.widget.CardView
            android:id="@+id/btnMorning"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="left"
                android:layout_gravity="top|left">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_about_us_title"
                    android:padding="10dp"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorPrimary"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_about_us"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--    Second Row    -->
        <androidx.cardview.widget.CardView
            android:id="@+id/switchLangCard"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="top"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="left"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Contact Us"
                    android:padding="10dp"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorPrimary"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Email: "
                        android:layout_marginRight="10dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"

                        />

                    <TextView
                        android:id="@+id/app_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_mail"
                        android:clickable="true"
                        android:textIsSelectable="true"
                        android:textSize="18sp"
                        android:textColor="@color/colorAccent"
                        android:fontFamily="@font/roboto_mono"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="WhatsApp: "
                        android:layout_marginRight="10dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"

                        />

                    <TextView
                        android:id="@+id/app_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_wa_number"
                        android:clickable="true"
                        android:textSize="18sp"
                        android:textColor="@color/colorAccent"
                        android:fontFamily="@font/roboto_mono"
                        />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--    Third Row    -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardMoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="left"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Follow Us"
                    android:padding="10dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal|center_vertical"
                    >

                    <ImageView
                        android:id="@+id/blogger"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/blogger"
                        android:background="@drawable/rounded_corner"
                        android:backgroundTint="@color/colorPrimary"
                        />

                    <ImageView
                        android:id="@+id/youtube"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/youtube"
                        android:background="@drawable/rounded_corner"
                        android:backgroundTint="@color/colorPrimary"
                        />

                    <ImageView
                        android:id="@+id/facebook"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/facebook"
                        android:background="@drawable/rounded_corner"
                        android:backgroundTint="@color/colorPrimary"
                        />

                    <ImageView
                        android:id="@+id/instagram"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/instagram"
                        android:background="@drawable/rounded_corner"
                        android:backgroundTint="@color/colorPrimary"
                        />

                    <ImageView
                        android:id="@+id/twitter"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/twitter"
                        android:background="@drawable/rounded_corner"
                        android:backgroundTint="@color/colorPrimary"
                        />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/joinWhatsapp"
        android:layout_below="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Join Latest WhatsApp Group"
                android:padding="10dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:gravity="center"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>